--- a/blug/package.json
+++ b/blug/package.json
@@ -7,11 +7,13 @@
     "start": "node ./dist/server.js"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^24.10.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "exceljs": "^4.4.0"
+    "exceljs": "^4.4.0",
+    "express": "^5.2.1"
   }
 }
