--- a/blug/package.json
+++ b/blug/package.json
@@ -7,12 +7,14 @@
     "start": "node ./dist/server.js"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "busboy": "^1.6.0",
     "exceljs": "^4.4.0",
     "express": "^5.2.1"
   }
