--- a/blug/package.json
+++ b/blug/package.json
@@ -10,12 +10,19 @@
     "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.0",
+    "@types/pug": "^2.0.10",
+    "@types/qrcode": "^1.5.6",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "busboy": "^1.6.0",
     "exceljs": "^4.4.0",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
+    "pug": "^3.0.3",
+    "puppeteer": "^24.34.0",
+    "qrcode": "^1.5.4"
   }
 }
