integrated image system - it uses local disk storage - consider cloud storage for scalabilty and performance

--- a/blug/package.json
+++ b/blug/package.json
@@ -19,10 +19,12 @@
     "busboy": "^1.6.0",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "file-type": "^21.3.0",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "pug": "^3.0.3",
     "puppeteer": "^24.34.0",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "sharp": "^0.34.5"
   }
 }
