--- a/blug/package.json
+++ b/blug/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.6",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.0",
     "@types/pug": "^2.0.10",
     "@types/qrcode": "^1.5.6",
@@ -20,6 +21,8 @@
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "file-type": "^21.3.0",
+    "handlebars": "^4.7.8",
+    "luxon": "^3.7.2",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "pug": "^3.0.3",
